--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -21,6 +21,11 @@
           flex: 1;
 }
 
+.header .top .logo a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .header .top .search {
   gap: 15px;
   -webkit-box-flex: 1;
@@ -101,21 +106,47 @@
   border-radius: 0 0 5px 5px;
 }
 
+.header .bottom .add_card_btn {
+  padding: 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-right: 5px;
+}
+
+.header .bottom .add_card_btn a {
+  background-color: var(--text-color1);
+  border: none;
+  outline: none;
+  color: white;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 3px;
+}
+
+.header .bottom .add_card_btn:hover {
+  background-color: transparent;
+}
+
 .header .bottom ul {
   font-weight: 700;
 }
 
-.header .bottom ul li {
+.header .bottom ul a {
   cursor: pointer;
   padding: 15px 10px;
   background-color: transparent;
+  text-decoration: none;
+  color: var(--text-color1);
 }
 
-.header .bottom ul li p {
-  gap: 3px;
-}
-
-.header .bottom ul li:hover {
+.header .bottom ul a:hover {
   background-color: var(--link-hover-bg);
   color: white;
 }
