--- a/src/styles/login/login.css
+++ b/src/styles/login/login.css
@@ -8,20 +8,19 @@
       -ms-flex: 1;
           flex: 1;
   padding: 0;
-  padding-left: 10px;
-}
-
-.login-register .pword_input input {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  margin: 0;
 }
 
 .login-register .pword_input button {
   background-color: transparent;
   color: var(--text-color1);
   font-size: 1.2em;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background-color: white;
+  padding: 0 15px;
 }
 
 .login-register form {
