--- a/src/styles/addcard/addcard.css
+++ b/src/styles/addcard/addcard.css
@@ -66,4 +66,8 @@
      object-fit: contain;
   margin: auto;
 }
+
+.form_loading {
+  background-color: rgba(255, 255, 255, 0.5);
+}
 /*# sourceMappingURL=addcard.css.map */
