--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,6 +31,15 @@ ul {
   list-style: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--text-color1)
+}
+
 .logo {
   color: var(--add-to-cart);
 }
@@ -89,6 +98,10 @@ ul {
   position: fixed;
 }
 
+.page-info {
+  margin-bottom: 15px;
+}
+
 .title {
   border-left: 4px solid var(--notification-bg);
   padding: 10px;
@@ -138,4 +151,72 @@ ul {
     left: 0;
     background: linear-gradient( rgba(255, 255, 255, 0.2), transparent, rgba(0, 0, 0, 0.2));
     border-radius: 3px;
+}
+
+.alph-cat {
+    gap: 10px;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    margin: 20px;
+    flex-wrap: wrap;
+}
+
+.alph-cat li {
+  padding: 2px 7px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.alph-cat li a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.alph-cat li:hover {
+  color: white;
+  background-color: var(--search-button-bg);
+  border-color: none;
+  transition: background-color 0.3s ease;
+}
+
+.alph-cat li.active-alph {
+  background-color: var(--notification-bg);
+  color: white;
+}
+
+.loader, .error {
+  min-height: 40vh;
+  gap: 15px;
+}
+
+.loader_text, .error_text {
+  color: var(--text-color2)
+}
+
+.error_img {
+  max-width: 100px;
+}
+
+.loader .rotating_circle {
+  aspect-ratio: 1;
+  max-width: 80px;
+  border-radius: 50%;
+  border: 10px solid var(--notification-bg);
+  border-left-color: white;
+  animation: rotate 0.6s linear infinite;
+}
+
+.truncate {
+  color: var(--text-color1);
+  font-weight: bold;
+}
+
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(1turn);
+  }
 }
