--- a/src/styles/cardinfo/cardinfo.scss
+++ b/src/styles/cardinfo/cardinfo.scss
@@ -1,22 +1,24 @@
 .card-info {
     margin: 20px auto;
-    padding: 15px;
     gap: 15px;
 
     .player-image {
         flex: 2;
+        padding: 15px;
 
         img {
             max-width: 100%;
-            height: 100%;
+            min-height: 100%;
             display: block;
             margin: auto;
-            max-height: 50vh;
+            max-height: 70vh;
         }
     }
 
     .player-info {
         flex: 2;
+        border-left: 1px solid var(--border);
+        padding: 15px;
 
         .player-name {
             font-size: 2rem;
