--- a/src/styles/cardinfo/cardinfo.css
+++ b/src/styles/cardinfo/cardinfo.css
@@ -1,6 +1,5 @@
 .card-info {
   margin: 20px auto;
-  padding: 15px;
   gap: 15px;
 }
 
@@ -8,20 +7,23 @@
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
+  padding: 15px;
 }
 
 .card-info .player-image img {
   max-width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: block;
   margin: auto;
-  max-height: 50vh;
+  max-height: 70vh;
 }
 
 .card-info .player-info {
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
+  border-left: 1px solid var(--border);
+  padding: 15px;
 }
 
 .card-info .player-info .player-name {
