--- a/src/styles/cards/cards.scss
+++ b/src/styles/cards/cards.scss
@@ -48,21 +48,31 @@
 
         .price_filter {
             padding: 15px;
-            flex-wrap: wrap;
-            gap: 10px;
+
+            .filters {  
+                flex-wrap: wrap;
+                gap: 10px;
+            }
 
             label {
                 font-size: 0.8em;
                 padding: 0 5px;
                 background-color: white;
                 top: 0;
-                left: 19px;
+                left: 10px;
                 transform: translateY(-50%);
-                color: var(--notification-bg)
+                color: var(--notification-bg);
+                font-weight: bold;
             }
 
             .bad {
                 color: red;
+            }
+
+            .filter_err_msg {
+                font-size: 0.8em;
+                margin-bottom: 10px;
+                font-weight: bold;
             }
 
             input {
@@ -82,6 +92,10 @@
 
             button {
                 flex: 1
+            }
+
+            p {
+                color: var(--text-color2);
             }
         }
     }
