--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,10 +16,6 @@
         max-height: 35px !important;
     }
 
-    .bottom ul li {
-        padding: 10px 5px !important;
-    }
-
     .nav-links {
         flex-direction: column;
         align-items: flex-start !important;
@@ -71,6 +67,17 @@
 
     .price_filter p:not(.filter_err_msg) {
         text-align: center;
+    }
+
+    .menu_link {
+        flex-direction: column;
+    }
+
+    .sub_menu {
+        position: relative !important;
+        top: 0 !important;
+        left: 0 !important;
+        min-width: 0 !important;
     }
 }
 
