--- a/src/styles/addcard/addcard.css
+++ b/src/styles/addcard/addcard.css
@@ -72,5 +72,6 @@
   left: 0;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.5);
+  z-index: 11111;
 }
 /*# sourceMappingURL=addcard.css.map */
