--- a/src/styles/cardinfo/cardinfo.css
+++ b/src/styles/cardinfo/cardinfo.css
@@ -12,7 +12,7 @@
 
 .card-info .player-image img {
   max-width: 100%;
-  min-height: 100%;
+  max-height: 90vh;
   display: block;
   margin: auto;
   max-height: 70vh;
