--- a/src/styles/search/search.scss
+++ b/src/styles/search/search.scss
@@ -13,3 +13,30 @@
         color: var(--text-color2);
     }
 }
+
+.search_results {
+
+    .dark_title {
+        margin-top: 20px;
+    }
+
+    .search_result {
+        padding: 20px;
+
+        .cards {
+            margin: 0;
+        }
+    }
+
+    .give_margin {
+        margin-top: 20px;
+    }
+
+    .search_filter_text {
+        text-align: center;
+        margin-top: 15px;
+        font-weight: 600;
+        font-size: 0.9em;
+        color: var(--text-color2);
+    }
+}
