--- a/src/styles/cardinfo/cardinfo.scss
+++ b/src/styles/cardinfo/cardinfo.scss
@@ -8,7 +8,7 @@
 
         img {
             max-width: 100%;
-            min-height: 100%;
+            max-height: 90vh;
             display: block;
             margin: auto;
             max-height: 70vh;
