--- a/src/styles/content/content.css
+++ b/src/styles/content/content.css
@@ -1,6 +1,5 @@
 .content {
-  max-width: 90%;
-  margin: 20px auto 0;
+  margin: 20px 5% 0;
   background-color: white;
   padding: 20px 20px 75px;
   border-radius: 5px 5px 0 0;
