--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -197,8 +197,9 @@ a {
   gap: 15px;
 }
 
-.loader_text, .error_text {
-  color: var(--text-color2)
+.loader_text, .error_text, .no_result p {
+  color: var(--text-color2);
+  font-weight: bold;
 }
 
 .error_img {
@@ -210,7 +211,7 @@ a {
   max-width: 80px;
   border-radius: 50%;
   border: 10px solid var(--notification-bg);
-  border-left-color: white;
+  border-left-color: transparent;
   animation: rotate 0.6s linear infinite;
 }
 
