--- a/src/styles/addcard/addcard.css
+++ b/src/styles/addcard/addcard.css
@@ -72,6 +72,25 @@
   left: 0;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.5);
-  z-index: 11111;
+  z-index: 1;
+}
+
+.error button {
+  width: 100%;
+  max-width: 100px;
+  font-weight: bold;
+  outline: none;
+  background-color: rgba(255, 0, 0, 0.15);
+  cursor: pointer;
+  border-radius: 3px;
+  border: 3px solid;
+  color: var(--text-color2);
+  opacity: 0.7;
+}
+
+.error button:hover {
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  opacity: 0.8;
 }
 /*# sourceMappingURL=addcard.css.map */
