--- a/src/styles/content/content.css
+++ b/src/styles/content/content.css
@@ -14,6 +14,11 @@
       grid-template-areas: "sidebar main-content";
 }
 
+.content .home-content .welcome_text {
+  font-size: 0.9em;
+  margin: 15px 0;
+}
+
 .content .sidebar {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -110,5 +115,70 @@
 
 .cards .card .card-img img {
   width: 100%;
+}
+
+.meter_container {
+  margin: 15px 0 0;
+  gap: 5px;
+  padding: 15px;
+}
+
+.meter_container .meter_text {
+  top: 0;
+  left: 2%;
+  background-color: white;
+  color: var(--notification-bg);
+  padding: 0 15px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.meter_container .meter {
+  border-radius: 3px;
+  overflow: hidden;
+  background-color: var(--text-color2);
+  gap: 2px;
+  border: 2px solid var(--text-color2);
+  max-width: 500px;
+}
+
+.meter_container .meter li {
+  padding: 7px 10px;
+  color: var(--border);
+  font-weight: bold;
+  text-align: center;
+  border-right: 2px solid var(--text-color2);
+  border-radius: 2px;
+}
+
+.meter_container .meter li:last-child, .meter_container .meter li.active {
+  border: none;
+}
+
+.meter_container .meter li.active {
+  background-color: var(--notification-bg);
+  color: var(--text-color1);
+}
+
+.meter_container .meter li.active:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.2)), color-stop(transparent), to(rgba(0, 0, 0, 0.3)));
+  background: linear-gradient(rgba(255, 255, 255, 0.2), transparent, rgba(0, 0, 0, 0.3));
+}
+
+.meter_container .meter:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), color-stop(transparent), to(rgba(255, 255, 255, 0.2)));
+  background: linear-gradient(rgba(0, 0, 0, 0.3), transparent, rgba(255, 255, 255, 0.2));
 }
 /*# sourceMappingURL=content.css.map */
