--- a/src/styles/content/content.css
+++ b/src/styles/content/content.css
@@ -16,7 +16,31 @@
 
 .content .home-content .welcome_text {
   font-size: 0.9em;
-  margin: 15px 0;
+  margin: 10px 0;
+}
+
+.content .home-content .title {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.content .home-content .title .prem_pkg_link {
+  cursor: pointer;
+  font-size: 0.7em;
+  color: var(--notification-bg);
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+}
+
+.content .home-content .title .prem_pkg_link:hover {
+  text-decoration: underline;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .content .sidebar {
@@ -118,7 +142,7 @@
 }
 
 .meter_container {
-  margin: 15px 0 0;
+  margin: 15px 0;
   gap: 5px;
   padding: 15px;
 }
