--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -36,6 +36,7 @@
                 button {
                     height: 100%;
                     border-radius: 0;
+                    padding: 0 5px;
                     outline: none;
                     border: 1px solid var(--search-button-bg);
                     background-color: var(--search-button-bg);
