--- a/src/styles/content/content.css
+++ b/src/styles/content/content.css
@@ -90,6 +90,45 @@
   height: 100%;
 }
 
+.cards .card.norm_prem_card {
+  --background: linear-gradient(-70deg, rgb(173, 173, 173), rgb(230, 230, 230), rgb(173, 173, 173));
+  --border-clr: var(--border)
+        ;
+}
+
+.cards .card.prem_card {
+  --background: linear-gradient(-70deg, rgb(139, 117, 75), rgb(255, 240, 154), rgb(139, 117, 75));
+  --border-clr: rgb(255, 240, 154);
+}
+
+.cards .card.premium_card {
+  border-color: var(--border-clr);
+}
+
+.cards .card.premium_card .card-title, .cards .card.premium_card .card-price {
+  font-weight: bold !important;
+}
+
+.cards .card.premium_card .card-desc {
+  color: black !important;
+}
+
+.cards .card.premium_card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--background);
+  z-index: 0;
+}
+
+.cards .card.premium_card * {
+  position: relative;
+  z-index: 1;
+}
+
 .cards .card .small-card-info {
   width: 100%;
 }
@@ -123,7 +162,8 @@
 
 .cards .card .small-card-info .card-price span {
   color: var(--text-color2);
-  font-size: 0.7rem;
+  font-size: 0.8rem;
+  font-weight: bold;
   top: -5px;
 }
 
