--- a/src/styles/content/content.scss
+++ b/src/styles/content/content.scss
@@ -80,6 +80,44 @@
         gap: 10px;
         height: 100%;
 
+        &.norm_prem_card {
+            --background: linear-gradient(-70deg, rgb(173, 173, 173), rgb(230, 230, 230), rgb(173, 173, 173));
+            --border-clr: var(--border)
+        }
+
+        &.prem_card {
+            --background: linear-gradient(-70deg, rgb(139, 117, 75), rgb(255, 240, 154), rgb(139, 117, 75));
+            --border-clr: rgb(255, 240, 154);
+        }
+
+        &.premium_card {
+            border-color: var(--border-clr);
+
+            .card-title, .card-price {
+                font-weight: bold !important;
+            }
+
+            .card-desc {
+                color: black !important;
+            }
+
+            &:before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: var(--background);
+                z-index: 0;
+            }
+
+            * {
+                position: relative;
+                z-index: 1;
+            }
+        }
+
         .small-card-info{
             width: 100%;
 
@@ -111,7 +149,8 @@
 
                 span {
                     color: var(--text-color2);
-                    font-size: 0.7rem;
+                    font-size: 0.8rem;
+                    font-weight: bold;
                     top: -5px;
                 }
             }
