--- a/src/styles/cards/cards.css
+++ b/src/styles/cards/cards.css
@@ -4,15 +4,23 @@
 
 .cards_page .filter .sport_filter {
   padding: 15px;
+  gap: 10px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.cards_page .filter .sport_filter * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+.cards_page .filter .sport_filter label {
+  min-width: 150px;
+  text-align: center;
 }
 
 .cards_page .filter .sport_filter select {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   max-width: 400px;
   padding: 10px;
   outline: none;
