--- a/src/styles/sellcard/sellcard.scss
+++ b/src/styles/sellcard/sellcard.scss
@@ -10,7 +10,38 @@
     transition: opacity 0.7s ease;
     padding: 5%;
 
-    form {
+    .pending_msg {
+        text-align: center;
+        color: var(--text-color2);
+
+        b {
+            color: var(--notification-bg)
+        }
+    }
+
+    .cancel {
+        top: 0;
+        right: 0;
+        width: 20px;
+        height: 20px;
+        margin: 10px;
+        border-radius: 50%;
+        color: rgb(127, 0, 0);
+        font-size: 1.5em;
+        background-color: transparent;
+        transform: scale(0.9);
+        transition: opacity, transform 0.3s ease;
+        opacity: 0.8;
+        outline: none;
+        border: none;
+
+        &:hover {
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
+
+    form, .pending_msg {
         max-width: 500px;
         padding: 30px;
         border-radius: 10px;
@@ -45,26 +76,6 @@
                 border: none;
                 cursor: pointer;
             }
-
-            .cancel {
-                top: 0;
-                right: 0;
-                width: 20px;
-                height: 20px;
-                margin: 10px;
-                border-radius: 50%;
-                color: rgb(127, 0, 0);
-                font-size: 1.5em;
-                background-color: transparent;
-                transform: scale(0.9);
-                transition: opacity, transform 0.3s ease;
-                opacity: 0.8;
-
-                &:hover {
-                    transform: scale(1);
-                    opacity: 1;
-                }
-            }
         }
     }
 }
@@ -73,7 +84,7 @@
     opacity: 1;
     pointer-events: all;
 
-    form {
+    form, .pending_msg {
         transform: scale(1);
         opacity: 1;
         transition: transform 0.5s ease;
